tests/build/widget_new/malformed_property_path3.stderr
error: expected `=`
 --> $DIR/malformed_property_path3.rs:5:28
  |
5 |         zero_ui::properties:margin = 0;
  |                            ^
